@@ -26,6 +26,6 @@
     <%= f.submit "Inserir" %>
   </p>
 <% end %>
-<% if session[:admin] %>
+
 <%= link_to 'Voltar', reservas_path %>
-<% end %>
+
