@@ -1,3 +1,6 @@
+2009-06-14 Suzana Matos <suzana.matos@gmail.com>
+* Fixed reservas for cliente
+
 2009-06-14 Iuri Fernandes <iurifq@gmail.com>
 * "Consulta 4" done
 
